--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dompurify": "^3.0.9",
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
     "react": "^18.2.0",
