--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
     "dompurify": "^3.0.9",
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
+    "jsrsasign": "^11.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
