--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "vite build",
+    "build": "vite build && gulp copyNonJSXFiles",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -28,8 +28,16 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "gulp": "^4.0.2",
+    "gulp-shell": "^0.8.0",
     "openai": "^4.29.1",
     "vite": "^4.0.0",
     "vite-plugin-mkcert": "^1.17.4"
-  }
+  },
+  "directories": {
+    "assets:": "./steganography.min.js"
+  },
+  "files": [
+    "./steganography.min.js"
+  ]
 }
