--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dompurify": "^3.0.9",
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
+    "first-input-delay": "^0.1.3",
     "jsrsasign": "^11.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
