--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@vercel/speed-insights": "^1.0.10",
     "buffer": "^6.0.3",
     "dompurify": "^3.0.9",
     "firebase": "^10.8.0",
